tests/specs/ts_type_assertion.txt
# mod.ts
export function foo(bar: any): asserts bar {}

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:1:1
  | 
1 | export function foo(bar: any): asserts bar {}
  | ^

# output.txt
Defined in file:///mod.ts:0:1

function foo(bar: any): asserts bar


# output.json
{
  "imports": [],
  "symbols": [
    {
      "name": "foo",
      "declarations": [
        {
          "location": {
            "filename": "file:///mod.ts",
            "line": 0,
            "col": 0,
            "byteIndex": 0
          },
          "declarationKind": "export",
          "kind": "function",
          "def": {
            "params": [
              {
                "kind": "identifier",
                "name": "bar",
                "optional": false,
                "tsType": {
                  "repr": "any",
                  "kind": "keyword",
                  "value": "any"
                }
              }
            ],
            "returnType": {
              "repr": "asserts bar",
              "kind": "typePredicate",
              "value": {
                "asserts": true,
                "param": {
                  "type": "identifier",
                  "name": "bar"
                },
                "type": null
              }
            },
            "hasBody": true,
            "isAsync": false,
            "isGenerator": false,
            "typeParams": []
          }
        }
      ]
    }
  ]
}
